@@ -43,6 +43,9 @@ export const ModelBrowserTreeView = ({
   const classes = useTreeStyle();
 
   const [state, setState] = useState<ModelBrowserTreeViewState>({ filterBarText: '' });
+  const converter = {
+    convert: (tree) => tree,
+  };
 
   return (
     <>
@@ -68,6 +71,7 @@ export const ModelBrowserTreeView = ({
           textToFilter={state.filterBarText}
           textToHighlight={state.filterBarText}
           markedItemIds={markedItemIds}
+          converter={converter}
         />
       </div>
     </>
